cropped photos, fixed some things for original size

--- a/css/main.css
+++ b/css/main.css
@@ -5,30 +5,31 @@ html {
   box-sizing: inherit;
 }
 body {
-
+  margin: 0;
 }
 header {
   margin: 0;
 }
 .banner {
-  margin: 0;
-  position: relative;
-  width: 100%;
 
 }
-h1 {
-
+p {
+  margin-left: 1rem;
+}
+.title {
+  font-size: 1.4rem;
+  text-align: center;
 }
 img {
   width: 100%;
-  padding: 1rem;
 }
 h2 {
 
 }
 .logo {
-  float: left;
-  width: 20%;
+  width: 9em;
+  margin: 0 auto;
+  display: block;
 
 }
 figure {
@@ -37,35 +38,37 @@ figure {
   width: 100%;
   position: relative;
   text-shadow: 3px 4px 4px #000;
+  display: block;
+
 }
 figcaption {
   position: absolute;
-  bottom: 20%;
-  left: 0;
+  bottom: 14%;
   width: 100%;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-style: italic;
   text-align: center;
 
 }
-nav ol li {
-  display: inline-block;
-  text-align: center;
-  padding: 0.7em;
-  float: left;
-  width: 25%;
+.nav {
   margin: 0;
-}
-
-ol li h3 {
+  padding: 0;
   list-style-type: none;
 }
+.nav a {
+  display: block;
+  padding: .5em 1em;
+  text-decoration: none;
+  border: 1px solid #000;
+}
+
 a.learnmore {
   padding: .5rem 3rem;
   border: 1px solid #000;
   display: block;
   text-align: center;
+margin: 1rem;
 
 }
 a.buttons {
@@ -76,7 +79,7 @@ a.buttons {
   position: relative;
   left: 50%;
   transform: translateX(-100%);
-  margin-top: 5em;
+  margin-top: 2em;
 }
 .bannerbtn {
   padding: .5rem;
@@ -86,8 +89,36 @@ a.buttons {
   position: relative;
   left: 50%;
   transform: translateX(-55%);
+}
+.daysofweek {
 
+}
+ol {
+  list-style-type: none;
+  padding: .5em;
 }
 footer {
   border-top: 1px solid #000;
+  background-color: lavender;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+.info {
+
+}
+.footerlink {
+  line-height: 10px;
+}
+
+
+@media only screen and (min-width: 24em) {
+.nav li {
+  display: inline-block;
+  text-align: center;
+  padding: 0.7em;
+  float: left;
+  width: 25%;
+  margin: 0;
+}
 }
